--- a/ok.html
+++ b/ok.html
@@ -28,7 +28,7 @@
   <div class="section" id="setup">
     <div class="container">
       <h2>Configuración del Juego</h2>
-      <label for="numJugadores">Número de Jugadores (2-4):</label>
+      <label for="numJugadores" style="font-size: 32;">Número de Jugadores (2-4):</label>
       <input type="number" id="numJugadores" min="2" max="4" value="4">
       <button class="boton" onclick="iniciarJuego()">Comenzar Juego</button>
       <button class="boton" onclick="irA('info')">Volver a Información</button>
